# ds-unidad-2-actividad-2-listasenlazadas-AngelCS0124

./: .gitignore  CMakeLists.txt  Doxyfile  NodoCircular.h  NodoDoble.h  README.md  RotorDeMapeo.h  TramaLoad.h  TramaMap.h  build.bat
arduino/: ESP32_Transmitter_Advanced.ino
docs/html/: Decodificador_8cpp.html  Decodificador_8cpp.js  Decodificador_8cpp__incl.dot  Decodificador_8cpp_a24e7e26319f2287b1ee89dfa27ce3c1f_icgraph.dot  Decodificador_8cpp_a553103eabfbc31efea39c834a2efb362_icgraph.dot  Decodificador_8cpp_source.html  Decodificador_8h.html  Decodificador_8h.js  Decodificador_8h__dep__incl.dot  Decodificador_8h__incl.dot  Decodificador_8h_source.html  ListaDeCarga_8cpp.html  ListaDeCarga_8cpp__incl.dot  ListaDeCarga_8cpp_source.html  ListaDeCarga_8h.html  ListaDeCarga_8h__dep__incl.dot  ListaDeCarga_8h__incl.dot  ListaDeCarga_8h_source.html  NodoCircular_8cpp.html  NodoCircular_8cpp__incl.dot  NodoCircular_8cpp_source.html  NodoCircular_8h.html  NodoCircular_8h.js  NodoCircular_8h__dep__incl.dot  NodoCircular_8h_source.html  NodoDoble_8cpp.html  NodoDoble_8cpp__incl.dot  NodoDoble_8cpp_source.html  NodoDoble_8h.html  NodoDoble_8h.js  NodoDoble_8h__dep__incl.dot  NodoDoble_8h_source.html  RotorDeMapeo_8cpp.html  RotorDeMapeo_8cpp__incl.dot  RotorDeMapeo_8cpp_source.html  Serial_8cpp.html  (+106 more)
include/: Decodificador.h  ListaDeCarga.h  NodoCircular.h  NodoDoble.h  RotorDeMapeo.h  Serial.h  TramaBase.h  TramaLoad.h  TramaMap.h
src/: Decodificador.cpp  ListaDeCarga.cpp  NodoCircular.cpp  NodoDoble.cpp  RotorDeMapeo.cpp  Serial.cpp  TramaLoad.cpp  TramaMap.cpp  main.cpp
(+36 files in other folders)
